# tonic

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PARITY.md  PROMPT.md  README.md  TONIC_REFERENCE.md  autoresearch.checks.sh  autoresearch.discovery.sh  autoresearch.doc-mismatch.md  autoresearch.error-messages.md  autoresearch.example-coverage.md  autoresearch.gap-report.md  autoresearch.ideas.md  autoresearch.improvement-plan.md  autoresearch.jsonl  autoresearch.md  autoresearch.native-parity.csv  autoresearch.plan.md  autoresearch.stdlib-history.jsonl  autoresearch.stdlib-history.md  context.md  count_gaps.sh  devenv.nix  flake.nix  install.sh  plan.md  progress.md  ralph.yml  research.md  result-man  x-post-autoresearch-report.txt  x-post-examples-report.txt
.githooks/: pre-commit  pre-push
.miniloop/: context.md  journal.jsonl  memory.jsonl  miniloops  pi-adapter  qa-plan.md  qa-report.md  spec-brief.md  spec-design.md  spec-research.md
.miniloops/: journal.jsonl  miniloops
.ralph/: current-events  current-loop-id  events-20260220-211725.jsonl  events-20260220-211754.jsonl  events-20260220-232112.jsonl  events-20260221-032452.jsonl  history.jsonl
benchmarks/: README.md  interpreter-vs-compiled-suite.toml  native-compiled-suite.toml  native-compiler-baselines.json  native-compiler-suite.toml  suite.toml
docs/: app-authoring-gaps.md  core-stdlib-gap-list.md  core-stdlib-profile.md  cross-compilation.md  differential-testing.md  llvm-backend-status.md  memory-management-roadmap.md  native-regression-policy.md  native-runtime.md  observability.md  package-registry-protocol.md  release-checklist.md  runtime-abi.md  runtime-memory-bakeoff.md  runtime-memory-task-scaffold.md  self-hosting-status.md  system-stdlib.md  text-binary-parser-contract.md
examples/: README.md  bools_and_nils.tn
research/: elixir-syntax-parity-checklist.md  ergonomics-fresh-eyes-verification.md  ergonomics-gemini-report.md  ergonomics-implementation-plan.md  examples-runnability-plan.md  otp_lite_design_research.md  reliability-regression-matrix.md  runtime-architecture.md  self-hosting-milestones.md  track-4-cli-tui-execution-model.md  track-6-risks-and-decision-matrix.md  track2-syntax-semantics.md  track5-tooling-developer-workflow.md
scripts/: bench-enforce.sh  bench-interpreter-vs-compiled.sh  bench-native-contract-enforce.sh  differential-enforce.sh  llvm-catalog-parity-enforce.sh  memory-bakeoff.sh  memory-baseline.sh  native-gates.sh  native-regression-policy.sh  (+1 more)
(+906 files in other folders)
