[package]
name = "tonic"
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
toml = "0.9.8"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "rustls-tls"] }
rand = "0.9"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"

[profile.release]
lto = "thin"
codegen-units = 8
panic = "abort"
strip = "symbols"
