[package]
name = "tonic"
version = "0.1.0-alpha.2"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
toml = "0.9.8"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "rustls-tls"], optional = true }
rand = "0.9"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
httpdate = "1.0"
time = { version = "0.3", features = ["formatting"] }
ed25519-dalek = { version = "2.2", optional = true }
regex = "1.12"
subtle = "2.6"
rustyline = { version = "14", features = ["derive"] }
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "io-util", "macros"], optional = true }
termimad = "0.34.1"

[features]
default = ["lsp", "network"]
lsp = ["dep:tower-lsp", "dep:tokio"]
network = ["dep:reqwest", "dep:ed25519-dalek"]

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"

[profile.dev]
debug = 1
split-debuginfo = "unpacked"

[profile.test]
opt-level = 1
debug = 0

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
